@@ -9,50 +9,51 @@ import java.io.File;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Main {
     public static void main(String[] args) {
-        Scanner userInputReader = new Scanner(System.in);
-
-        System.out.println("Please, enter directory:");
-        final String directoryName = userInputReader.next();
-
-        if (directoryName.isEmpty()) {
-            System.out.println("Directory name cannot be empty. Press \"Enter\" to exit.");
-            userInputReader.next();
-            return;
-        }
-
-        System.out.println("Please, enter minimal word length:");
-        final int minWordLength = userInputReader.nextInt();
-
-        if (minWordLength < 0) {
-            System.out.println("Minimal word length cannot be negative. Press \"Enter\" to exit.");
-            userInputReader.next();
-            return;
-        }
-
-        System.out.println("Please, enter a number of most frequent words to show:");
-        final int topWordsNumber = userInputReader.nextInt();
-
-        if (topWordsNumber < 0) {
-            System.out.println("Number of most frequent words cannot be negative. Press \"Enter\" to exit.");
-            userInputReader.next();
-            return;
-        }
-
-        final List<Path> filePaths = selectDirectoryTextFiles(directoryName);
-
-        if (CollectionUtils.isNullOrEmpty(filePaths)) {
-            System.out.println("No files to process. Enter any key to exit.");
-            userInputReader.next();
-            return;
-        }
-
-        final WordsCounter counter = new ConcurrentFileWordsCounter(filePaths, new DefaultWordLexer(minWordLength));
-
         try {
-            System.out.println("Count started.");
+            Scanner userInputReader = new Scanner(System.in);
+
+            System.out.println("Please, enter a path to directory with text files:");
+            final String directoryName = userInputReader.next();
+
+            if (directoryName.isEmpty()) {
+                System.out.println("Directory name cannot be empty. Press \"Enter\" to exit.");
+                System.in.read();
+                return;
+            }
+
+            System.out.println("Please, enter a minimal word length:");
+            final int minWordLength = userInputReader.nextInt();
+
+            if (minWordLength < 0) {
+                System.out.println("Minimal word length cannot be negative. Press \"Enter\" to exit.");
+                System.in.read();
+                return;
+            }
+
+            System.out.println("Please, enter a number of most frequent words to show:");
+            final int topWordsNumber = userInputReader.nextInt();
+
+            if (topWordsNumber < 0) {
+                System.out.println("Number of most frequent words cannot be negative. Press \"Enter\" to exit.");
+                System.in.read();
+                return;
+            }
+
+            final List<Path> filePaths = selectDirectoryTextFiles(directoryName);
+
+            if (CollectionUtils.isNullOrEmpty(filePaths)) {
+                System.out.println("No files to process. Press \"Enter\" to exit.");
+                System.in.read();
+                return;
+            }
+
+            final WordsCounter counter = new ConcurrentFileWordsCounter(filePaths, new DefaultWordLexer(minWordLength));
+            System.out.printf("%d files found. Count started.%n", filePaths.size());
+
             final long countStart = System.nanoTime();
             final Map<String, Long> words = counter.countAndGet();
             final List<WordFrequency> topWords = getTopWords(words, topWordsNumber);
@@ -66,29 +67,32 @@ public class Main {
                 System.out.println(word);
             }
 
-            System.out.println("Press enter to exit.");
-            userInputReader.next();
+            System.out.println("Press \"Enter\" to exit.");
+            System.in.read();
         } catch (Exception e) {
-            System.out.println("Something went wrong");
+            System.out.println("Something went wrong.");
         }
     }
 
     private static List<Path> selectDirectoryTextFiles(String directoryName) {
         final File[] files = new File(directoryName).listFiles(file -> file.isFile() && file.getName().endsWith(".txt"));
 
-        return files != null ? Arrays.stream(files).map(File::getAbsolutePath).map(Paths::get).toList() : null;
+        return files != null
+                ? Arrays.stream(files).map(File::getAbsolutePath).map(Paths::get).collect(Collectors.toList())
+                : null;
     }
 
     private static List<WordFrequency> getTopWords(Map<String, Long> dictionary, int topWordsNumber) {
         final ArrayList<Map.Entry<String, Long>> entries = new ArrayList<>(dictionary.entrySet());
         entries.sort(Map.Entry.comparingByValue(Comparator.reverseOrder()));
 
-        return entries
-                .subList(0, topWordsNumber)
+        final List<Map.Entry<String, Long>> topWordsEntries = entries.size() > topWordsNumber
+                ? entries.subList(0, topWordsNumber)
+                : entries;
+
+        return topWordsEntries
                 .stream()
                 .map(e -> new WordFrequency(e.getKey(), e.getValue()))
-                .toList();
+                .collect(Collectors.toList());
     }
-
-    private record WordFrequency(String word, long frequency) {}
 }
